--- a/HumanResources/HRSOAServices/pom.xml
+++ b/HumanResources/HRSOAServices/pom.xml
@@ -6,7 +6,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <!-- Add project modules -->
+        <!-- Add project modules. -->
     	<module>BenefitsPaymentService</module>
     </modules>
 </project>
