updated as per Read operation result

--- a/WLSConfigurations/HumanResources/DataSources.properties
+++ b/WLSConfigurations/HumanResources/DataSources.properties
@@ -1,7 +1,9 @@
 DSList=HRDataSource,HRRODataSource,EBSDataSource,FLXDataSource
 
+#DataSource Properties
+#Sat Jun 16 11:10:26 CDT 2018
 HRDataSource.DataSourceType=Generic
-HRDataSource.URL=jdbc:oracle:thin:@//odbld55.compute-a32164.oraclecloud.internal:1522/sod55
+HRDataSource.URL=jdbc\:oracle\:thin\:@//odbld55.compute-a32164.oraclecloud.internal\:1522/sod55
 HRDataSource.ConnectionClass=oracle.jdbc.xa.client.OracleXADataSource
 HRDataSource.DSName=HR XA Data Source
 HRDataSource.User=fd_admin
@@ -9,6 +11,8 @@ HRDataSource.Targets=${{SOA_TARGET}}
 HRDataSource.JNDINames=jdbc/HRDataSource
 HRDataSource.Password=${{DATASOURCE_PW}}
 HRDataSource.InitialCapacity=0
+HRDataSource.MinCapacity=1
+HRDataSource.StatementCacheSize=20
 
 HRRODataSource.DataSourceType=Generic
 HRRODataSource.URL=jdbc:oracle:thin:@//odbld55.compute-a32164.oraclecloud.internal:1522/sod55
