--- a/warranty-claim/icspackage/project/WARRANTY_CLAIM_01.00.0000/ics_project_attributes.properties
+++ b/warranty-claim/icspackage/project/WARRANTY_CLAIM_01.00.0000/ics_project_attributes.properties
@@ -1,5 +1,5 @@
 #Wed May 01 16:22:56 UTC 2019
-#another comment
+#webinar change
 project_persisted_state=ACTIVATED
 originalICSVersion=19.2.1.0.0-EC
 project_version=01.00.0000
