--- a/VisualCpp/demo/demo.vcxproj
+++ b/VisualCpp/demo/demo.vcxproj
@@ -16,7 +16,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ItemGroup>
-    <ClCompile Include="CalculatorTutorial.cpp" />
+    <ClCompile Include="demo.cpp" />
   </ItemGroup>
 
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Targets" />
