--- a/OBIEE/12c/RPD.properties
+++ b/OBIEE/12c/RPD.properties
@@ -3,6 +3,6 @@
 #Variables
 variable:BI_EE_HOME=${{FD_ORACLE_BI_HOME}}
 #variable:BI_EE_HOME='/testing/test/test/test'
-connectionpool_ds:BSC=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = obitl02.flexagon)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = bsc)))
+connectionpool_ds:BSC=${{OBI_BSC_DSN}}
 connectionpool_user:BSC=BSC_USER
-connectionpool_pass:BSC=welcome1
+connectionpool_pass:BSC=${{OBI_BSC_PASSWORD}}
