commented out properties

--- a/mule/api-policy/src/main/resources/mule.properties
+++ b/mule/api-policy/src/main/resources/mule.properties
@@ -1,7 +1,7 @@
-http.port = 8081
+#http.port = 8081
 
-PLCY_SYS_DB_PASSWORD=mule
-PLCY_SYS_DB_USER=mule
+#PLCY_SYS_DB_PASSWORD=mule
+#PLCY_SYS_DB_USER=mule
 db.host = iltdb.mulesoft-training.com
 db.port = 3306
 db.user = mule
