Fix members in package.xml

--- a/Salesforce-lwc-test/package.xml
+++ b/Salesforce-lwc-test/package.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xsi:type="Package" xmlns="http://soap.sforce.com/2006/04/metadata"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <types>
-  <members>customerTile</members>
-  <members>customerList</members>
+  <members>ldsUtils</members>
   <name>LightningComponentBundle</name>
  </types>
  <version>47.0</version>
